--- a/brewing-tour/images.html
+++ b/brewing-tour/images.html
@@ -54,30 +54,56 @@
     <img class="content" src="img/Original-Dutch-Towns-of-Brooklyn.jpg" alt="Original Dutch Towns of Brooklyn">
     <p class="caption-title">Original Dutch Towns of Brooklyn</p>
 
+    <img class="content historical" src="img/peter-stuyvesant.jpg" alt="Peter Stuyvesant">
+    <p class="caption-title">Peter Stuyvesant</p>
+    <p class="caption-text"><em>Source: Brooklyn Historical Society</em></p>
+
     <img class="content historical" src="img/Bushwick-Church-1711.jpg" alt="Bushwick Church 1711">
-    <p class="caption-title">Bushwick Church 1711. <em>Source: NYPL</em></p>
+    <p class="caption-title">Bushwick Church, 1711</p>
+    <p class="caption-text"><em>Source: NYPL</em></p>
+
+    <img class="content historical" src="img/washingtons-recipe.jpg" alt="George Washington's Beer Recipe">
+    <p class="caption-title">George Washington's Beer Recipe</p>
+    <p class="caption-text">In 1918, in the New York Public Library, George Washington's recipe for making beer in his own handwriting was discovered among the pages of a military notebook he kept while overseeing troops in Virginia during the French and Indian war. While camping with his troops in 1757, he scrawled these instructions for "small beer," a porter made with molasses. The original recipe is still housed in the library's main building.</p>
 
     <img class="content historical" src="img/William-D-Faulkner-Account-Books.jpg" alt="William D Faulkner Account Books">
     <p class="caption-title">Page from William D. Faulkner Account Books, 1779</p>
     <p class="caption-text">During the Revolutionary War, New York City brewer William D. Faulkner (active from 1772 to 1790) sold beer to both the Continental and British armies. <em>Source: New York Historical Society</em></p>
 
+    <img class="content historical" src="img/neziah-bliss.jpg" alt="Neziah Bliss">
+    <p class="caption-title">Neziah Bliss</p>
+    <p class="caption-text">A major developer in the early 1800s in Williamsburg, Greenpoint, and Long Island City (formerly known as Blissville). He plowed the way for Greenpoint Avenue and Franklin Street which once crossed a bridge over Bushwick Creek (also known as Normaan's Kil).</p>
+
     <img class="content historical" src="img/Bakers-Tavern-1842.jpg" alt="Bakers Tavern 1842">
-    <p class="caption-title">Bakers Tavern 1842</p>
+    <p class="caption-title">Bakers Tavern, 1842</p>
     <p class="caption-text">Flatbush Avenue and Atlantic Avenue, Long Island Railroad on the left.</p>
 
-    <img class="content historical" src="img/Bushwick-beer-tavern-1895.jpg" alt="Bushwick beer tavern 1895">
-    <p class="caption-title">Bushwick beer tavern 1895</p>
+    <img class="content historical" src="img/Bushwick-beer-tavern-1895.jpg" alt="Bushwick beer tavern, 1895">
+    <p class="caption-title">A Bushwick tavern, 1895</p>
+    <p class="caption-text">The Budweiser sign is not referring to the Anheuser-Busch brand from St. Louis but to the wholly separate Budweiser Brewery of Prospect Heights, Brooklyn. That brewery would be sued by Anheuser-Busch in 1898 and change its name to Nassau Brewing Company.</p>
+
+    <img class="content historical" src="img/brooklyn-currier-ives.jpg" alt="The City of Brooklyn">
+    <p class="caption-title">The City of Brooklyn, 1879</p>
+    <p class="caption-text">A print by Currier & Ives</p>
 
     <img class="content historical" src="img/LanzerBrewery.jpg" alt="Lanzer Brewery">
     <p class="caption-title">Lanzer Brewery</p>
     <p class="caption-text">The Piel brothers start out by buying this brewery located on the corner of Liberty and Georgia. This photo is of the original Lanzer Brewery, before it was damaged extensively by fire in 1873. The Piel brothers would rebuild the brewery and open on May 24, 1883 (the same day the Brooklyn Bridge was opened). <em>Photo source: TJ Wiegand Collection</em></p>
 
+    <img class="content historical" src="img/piels-1942.jpg" alt="Piels, 1942">
+    <p class="caption-title">Piels, 1942</p>
+    <p class="caption-text"><em>Source: East New York Project</em></p>
+
     <img class="content historical" src="img/1909-New-York-Sun-brewery-ads.jpg" alt="1909 New York Sun brewery ads">
-    <p class="caption-title">1909 New York Sun brewery ads</p>
+    <p class="caption-title">1909 New York Sun Brewery ads</p>
     <p class="caption-text">Liebmann’s (Bushwick), Otto Huber (Bushwick), Ulmer (Bushwick), Trommer’s (Bushwick), Excelsior (Bushwick)</p>
 
     <img class="content historical" src="img/bbt-william-ulmer-brewery.jpg" alt="William Ulmer Brewery">
     <p class="caption-title">William Ulmer Brewery</p>
+
+    <img class="content historical" src="img/william-ulmer-plaque.jpg" alt="William Ulmer Plaque">
+    <p class="caption-title">William Ulmer Plaque</p>
+    <p class="caption-text">Marking it as the first brewery in New York City to be landmarked, 2010.</p>
 
     <img class="content historical" src="img/Egon-Eisenhauer-Gesanges-die-Deutschlandreise.jpg" alt="Egon Eisenhauer Gesanges die Deutschlandreise">
     <p class="caption-title">Cover of Egon Eisenhauer, Auf Flügeln des Gesanges die Deutschlandreise des Arion von Brooklyn</p>
@@ -86,6 +112,9 @@
     <img class="content historical" src="img/arion-hall.jpg" alt="Arion Hall">
     <p class="caption-title">Arion Hall</p>
     <p class="caption-text">1908 Brooklyn Postcard</p>
+
+    <img class="content historical" src="img/wall-street.jpg" alt="Wall Street">
+    <p class="caption-title">A cornerstone inscription noting the former name of Arion Place, Wall Street</p>
 
     <img class="content historical" src="img/Theobald-Mark-Engelhardt.jpg" alt="Theobald Mark Engelhardt">
     <p class="caption-title">Theobald Mark Engelhardt (1851–1935)</p>
@@ -117,6 +146,17 @@
 
     <p class="caption-text">Chadwick lived in Brooklyn and came to be known as the "Father of Baseball." He is credited with creating the statistics of batting average and earned run average (ERA) as well as box scores and the abbreviation "K" that designates a strikeout.</p>
 
+    <img class="content historical" src="img/rheingold-delivery.jpg" alt="A Rheingold Delivery Truck">
+    <p class="caption-title">A Rheingold Delivery Truck</p>
+
+    <img class="content historical" src="img/rheingold-early.jpg" alt="Rheingold">
+    <p class="caption-title">Rheingold Postcard, 1972</p>
+    <p class="caption-text">Depicting the original brewery in Bushwick in 1855</p>
+
+    <img class="content historical" src="img/times-square-1934.jpg" alt="Times Square, 1934">
+    <p class="caption-title">Times Square, 1934</p>
+    <p class="caption-text">Note the Rheingold billboard</p>
+
     <img class="content historical" src="img/Rheingold-ad.jpg" alt="Rheingold ad">
     <p class="caption-title">Miss Rheingold ad</p>
 
@@ -136,9 +176,16 @@
     <p class="caption-title">Gablingers Beer Paper Ad</p>
     <p class="caption-text">Gablinger’s Diet Beer (begun at Liebmann and Sons) appeared in 1967, thanks to the work of Joseph Owades, who found a way to remove starch, carbs, and thus calories from beer. He shared the recipe with a friend at Meister Brau, which followed thereafter. Miller bought Meister Brau in 1972 and launched Miller Lite in 1975, supported with &quot;Tastes Great, Less Filling,&quot; the iconic campaign created by McCann-Erickson.</p>
     
-    <img class="content historical" src="img/Leonard-Eppig.jpg" alt="Leonard Eppig">
+    <img class="content historical" src="img/Leonard-Eppig-calendar.jpg" alt="Leonard Eppig Calendar">
     <p class="caption-title">Leonard Eppig</p>
     <p class="caption-text">592 Bushwick Avenue and Melrose Street</p>
+
+    <img class="content historical" src="img/leonard-eppig-44-george-st.jpg" alt="Leonard Eppig Brewery">
+    <p class="caption-title">Leonard Eppig Brewery</p>
+    <p class="caption-text">Expansion still standing at 44 George Street</p>
+
+    <img class="content historical" src="img/leonard-eppig.jpg" alt="Leonard Eppig">
+    <p class="caption-title">Leonard Eppig</p>
 
     <img class="content historical" src="img/Schaefer-Brewery-1842.jpg" alt="Schaefer Brewery 1842">
     <p class="caption-title">Schaefer Brewery, 1842</p>
@@ -181,21 +228,22 @@
 
     <img class="content historical" src="img/193MelroseStreet-InterboroBreweryPortraitofBrewmasterReid.jpg" alt="193 Melrose Street Interboro Brewery Portrait of Brewmaster Reid">
     <p class="caption-title">Portrait of Interboro Brewery Brewmaster Reid</p>
+    <p class="caption-text">Interboro was headed by Jacob Levy who bought Leonard Eppig's Brewery just before Prohibition. Levy's business partner was a man named Arthur Flegenheimer — more notoriously known as gangster Dutch Schultz, "The Beer Baron of the Bronx." In July of 1935, Manhattan beer giant George Ehret’s son Louis J. Ehret purchased the Interboro facility and later, the brewery was acquired by Joseph Schlitz in 1949. The brewery closed in 1950.</p>
 
     <img class="content historical" src="img/PulaskiStreet-near-SumnerAvenue-ExcelsiorBrewingBuilding.jpg" alt="Pulaski Street near Sumner Avenue Excelsior Brewing Building">
     <p class="caption-title">Excelsior Brewing Co. Building</p>
     <p class="caption-text">Pulaski Street near Sumner Avenue</p>
 
-    <img class="content historical" src="img/Excelsior-Brewery-1948.jpg" alt="Excelsior Brewery 1948">
-    <p class="caption-title">Excelsior Brewery 1948</p>
+    <img class="content historical" src="img/Excelsior-Brewery-1948.jpg" alt="Excelsior Brewery, 1948">
+    <p class="caption-title">Excelsior Brewery, 1948</p>
     <p class="caption-text">Photo is showing the abandoned brewery. It had closed in 1938 and would be torn down in just a few years, sometime in the 1950s.</p>
 
-    <img class="content historical" src="img/Eurich-Brewery-Calendar-1900.jpg" alt="Eurich Brewery Calendar 1900">
-    <p class="caption-title">Eurich Brewery Calendar 1900</p>
+    <img class="content historical" src="img/Eurich-Brewery-Calendar-1900.jpg" alt="Eurich Brewery Calendar, 1900">
+    <p class="caption-title">Eurich Brewery Calendar, 1900</p>
     <p class="caption-text">Wyckoff Avenue at Halsey Street. This brewery passed through several changes of ownership and as many names: Leibinger &amp; Oehm (1887-1895), Conrad Eurich (1899-1903) and finally, the Elm Brewing Company, which went out of business in 1907. All the proprietors used the hand-and-axe symbol. The Brooklyn border (Bushwick/Ridgewood) is just behind the buildings.</p>
 
     <img class="content historical" src="img/Joseph-Fallerts-Brewery-Calendar-1896.jpg" alt="Joseph Fallerts Brewery Calendar 1896">
-    <p class="caption-title">Joseph Fallert’s Brewery Calendar 1896</p>
+    <p class="caption-title">Joseph Fallert’s Brewery Calendar, 1896</p>
     <p class="caption-text">Meserole Street and Lorimer Street</p>
 
     <img class="content historical" src="img/Joseph-Fallerts-1.jpg" alt="Joseph Fallerts">
@@ -215,37 +263,75 @@
     <p class="caption-text">Meserole Street and Lorimer Street</p>
 
     <img class="content historical" src="img/Joseph-Fallerts-Daily-Eagle-ad-1897.jpg" alt="Joseph Fallerts Daily Eagle ad 1897">
-    <p class="caption-title">Joseph Fallert’s Daily Eagle ad 1897</p>
+    <p class="caption-title">Joseph Fallert’s Daily Eagle Ad, 1897</p>
     <p class="caption-text">&quot;Alt-Bayerisch (old Bavarian) beer. A dark beer especially brewed and bottled for family use where a strengthening and healthy beverage is necessary. It’s a food.&quot;</p>
+
+    <img class="content historical" src="img/zimmermans-saloon.jpg" alt="Zimmerman’s Saloon, 1877">
+    <p class="caption-title">Zimmerman’s Saloon, 1877</p>
+    <p class="caption-text">This saloon, located at the corner of Graham Ave and Moore St., was owned by John Zimmerman in the early 1880s and sold to Anna Marie and Henry L. Schwint circa 1885. That’s Anna Marie in the doorway and her husband Henry standing above her to her immediate right. <em>Source: John A. Schwint via Will Anderson’s Breweries of Brooklyn</em></p>
 
     <img class="content historical" src="img/teddys.jpg" alt="Teddy’s Bar">
     <p class="caption-title">Teddy’s</p>
     <p class="caption-text">Berry Street and N 8th Street</p>
 
+    <img class="content historical" src="img/mae-west.jpg" alt="Mae West">
+    <p class="caption-title">Mae West</p>
+    <p class="caption-text">Granddaughter of Bushwick beer baron, Peter Doelger</p>
+
+    <img class="content historical" src="img/neirs-1898.jpg" alt="Neir's Social Hall">
+    <p class="caption-title">Neir's Social Hall, 1898</p>
+    <p class="caption-text">One of the oldest bars in New York. And where Martin Scorsese shot all the great bar scenes in Good Fellas!</p>
+
+    <img class="content historical" src="img/neirs-ballroom.jpg" alt="A dance at Neir's Social Hall">
+    <p class="caption-title">A Dance at Neir's Social Hall</p>
+    <p class="caption-text">The old ballroom at Neir's where Mae West once performed. Judging by the 48-star flag, this photo must have been taken sometime after 1912.</p>
+
+    <img class="content historical" src="img/neirs-bowling-alley.jpg" alt="The bowling alley at Neir's">
+    <p class="caption-title">The Bowling Alley at Neir's</p>
+    <p class="caption-text">One of the first registered bowling alleys in the country.</p>
+
+    <img class="content historical" src="img/neirs-social-hall.jpg" alt="Neir's Social Hall">
+    <p class="caption-title">Neir's Social Hall</p>
+    <p class="caption-text">Note the sign proclaiming proud service of Joseph Eppig's Beer (Joseph was Leonard's younger brother).</p>
+
+    <img class="content historical" src="img/union-course-peytona-fashion-1845.jpg" alt="Fashion meets Peytona, 1845">
+    <p class="caption-title">Fashion meets Peytona, 1845</p>
+    <p class="caption-text">A famous race at Union Course, situated directly by Neir's Social Hall. The race took place on May 13th, 1845 with a purse of $20,000. The lithograph is by Charles Severin and published by Nathaniel Currier. The race was won by Peytona, time 7:39 3/4 : 7:45 1/4.<em>Source: United States Library of Congress's Prints and Photographs division.</em></p>
+
     <img class="content historical" src="img/Prohibition-1930.jpg" alt="Prohibition 1930">
-    <p class="caption-title">Prohibition 1930</p>
+    <p class="caption-title">Prohibition, 1930</p>
 
     <img class="content historical" src="img/Chas-Schaefer-Corp-and-Otto-Huber-trucks.jpg" alt="Chas Schaefer Corp and Otto Huber trucks">
     <p class="caption-title">Chas. Schaefer Corp. and Otto Huber trucks</p>
 
-    <img class="content historical" src="img/Huber-Hittleman-Brewery-ad.jpg" alt="Huber Hittleman Brewery ad">
-    <p class="caption-title">Huber Hittleman Brewery ad</p>
+    <img class="content historical" src="img/otto-huber.jpg" alt="Otto Huber Sr.">
+    <p class="caption-title">Otto Huber, Sr.</p>
 
-    <img class="content historical" src="img/Huber-Hittleman-Brewery-3d.jpg" alt="Huber Hittleman Brewery complex">
-    <p class="caption-title">Huber Hittleman Brewery complex</p>
+    <img class="content historical" src="img/Huber-Hittleman-Brewery-ad.jpg" alt="Huber-Hittleman Brewery Ad">
+    <p class="caption-title">Huber-Hittleman Brewery Ad</p>
+
+    <img class="content historical" src="img/Huber-Hittleman-Brewery-3d.jpg" alt="Huber-Hittleman Brewery Complex">
+    <p class="caption-title">Huber-Hittleman Brewery Complex</p>
     <p class="caption-text">Meserole Street from Bushwick Avenue to Waterbury Street</p>
 
-    <img class="content historical" src="img/Huber-Hittleman-Brewery.jpg" alt="Huber Hittleman Brewery ad">
-    <p class="caption-title">Huber Hittleman Brewery ad</p>
+    <img class="content historical" src="img/Huber-Hittleman-Brewery.jpg" alt="Huber Hittleman Brewery Ad">
+    <p class="caption-title">Huber-Hittleman Brewery ad</p>
 
-    <img class="content historical" src="img/Huber-Hittleman-Brewery-1.jpg" alt="Huber Hittleman Brewery">
-    <p class="caption-title">Huber Hittleman Brewery</p>
+    <img class="content historical" src="img/Huber-Hittleman-Brewery-1.jpg" alt="Huber-Hittleman Brewery">
+    <p class="caption-title">Huber-Hittleman Brewery</p>
 
-    <img class="content historical" src="img/Huber-Hittleman-Brewery-2.jpg" alt="Huber Hittleman Brewery">
-    <p class="caption-title">Huber Hittleman Brewery</p>
+    <img class="content historical" src="img/Huber-Hittleman-Brewery-2.jpg" alt="Huber-Hittleman Brewery">
+    <p class="caption-title">Huber-Hittleman Brewery</p>
+
+    <img class="content historical" src="img/welz-zerweck-1862-1912.jpg" alt="Welz & Zerweck High Ground Brewery">
+    <p class="caption-title">Welz & Zerweck High Ground Brewery</p>
+    <p class="caption-text">At Myrtle and Wyckoff. This calendar depicts the brewery in 1912 along with a thumbnail on the lower left of the original brewery in 1862.</p>
+
+    <img class="content historical" src="img/welz-zerweck-tray.jpg" alt="Welz & Zerweck Tray">
+    <p class="caption-title">Welz & Zerweck Tray</p>
 
     <img class="content historical" src="img/brewery-merch.jpg" alt="brewery merch">
-    <p class="caption-title">Schafer and Rheingold flea market finds!</p>
+    <p class="caption-title">My own Schafer and Rheingold flea market finds!</p>
 
     <h3><a href="#" class="scrollup"><i class="fa fa-arrow-up fa-3x" aria-hidden="true"></i></a></h3>
 
