--- a/brewing-tour/images.html
+++ b/brewing-tour/images.html
@@ -79,12 +79,8 @@
     <p class="caption-text">Flatbush Avenue and Atlantic Avenue, Long Island Railroad on the left.</p>
 
     <img class="content historical" src="img/Bushwick-beer-tavern-1895.jpg" alt="Bushwick beer tavern, 1895">
-    <p class="caption-title">A Bushwick tavern, 1895</p>
+    <p class="caption-title">A Bushwick Tavern, 1895</p>
     <p class="caption-text">The Budweiser sign is not referring to the Anheuser-Busch brand from St. Louis but to the wholly separate Budweiser Brewery of Prospect Heights, Brooklyn. That brewery would be sued by Anheuser-Busch in 1898 and change its name to Nassau Brewing Company.</p>
-
-    <img class="content historical" src="img/brooklyn-currier-ives.jpg" alt="The City of Brooklyn">
-    <p class="caption-title">The City of Brooklyn, 1879</p>
-    <p class="caption-text">A print by Currier & Ives</p>
 
     <img class="content historical" src="img/LanzerBrewery.jpg" alt="Lanzer Brewery">
     <p class="caption-title">Lanzer Brewery</p>
@@ -297,9 +293,6 @@
     <img class="content historical" src="img/union-course-peytona-fashion-1845.jpg" alt="Fashion meets Peytona, 1845">
     <p class="caption-title">Fashion meets Peytona, 1845</p>
     <p class="caption-text">A famous race at Union Course, situated directly by Neir's Social Hall. The race took place on May 13th, 1845 with a purse of $20,000. The lithograph is by Charles Severin and published by Nathaniel Currier. The race was won by Peytona, time 7:39 3/4 : 7:45 1/4.<em>Source: United States Library of Congress's Prints and Photographs division.</em></p>
-
-    <img class="content historical" src="img/Prohibition-1930.jpg" alt="Prohibition 1930">
-    <p class="caption-title">Prohibition, 1930</p>
 
     <img class="content historical" src="img/Chas-Schaefer-Corp-and-Otto-Huber-trucks.jpg" alt="Chas Schaefer Corp and Otto Huber trucks">
     <p class="caption-title">Chas. Schaefer Corp. and Otto Huber trucks</p>
