--- a/brewing-tour/map.html
+++ b/brewing-tour/map.html
@@ -51,11 +51,11 @@
 
   <div class="wrapper">
 
-    <p>Below is my own running collection of breweries and beer-related historical spots in and around Bushwick. But don’t worry—the tour doesn’t try and get to them all! We follow the short blue path that runs right up the center, from Belvidere Street to Meserole Avenue.</p>
+    <p>Below is my own running collection of breweries and beer-related historical spots in and around Bushwick. But don’t worry—the tour doesn’t try and get to them all! We follow the short green path that runs right up the center, from Belvidere Street to Meserole Avenue.</p>
 
     <p>We start right in the center of <strong>Belvidere Street</strong>, between Beaver Street and Broadway, near the Myrtle Ave J, M, Z stop. We’ll walk about one mile, mostly up Bushwick Avenue and finish up at at <a href="http://www.thewellbrooklyn.com/" target="_blank">The Well,</a> a bar and former brewery near the Montrose Avenue L stop.</p>
 
-    <p>You can also <a href="https://www.google.com/maps/d/edit?mid=z8DLb-zjv3Kc.ktdwsWGQu7Lc&usp=sharing" target="_blank">view this map on Google Maps</a>.</p>
+    <p>You can also <a href="https://www.google.com/maps/d/edit?mid=z8DLb-zjv3Kc.ktdwsWGQu7Lc&usp=sharing" target="_blank">view this map via Google Maps</a>.</p>
 
     <div class="shim"></div>
 
