--- a/brewing-tour/timeline.html
+++ b/brewing-tour/timeline.html
@@ -69,11 +69,11 @@
 
     <h3>1822</h3>
 
-    <p>William Johnson opens Brooklyn’s first brewery.</p>
+    <p>William Johnson opens Brooklyn’s first major commercial brewery.</p>
 
     <div class="shim"></div>
     
-    <img class="content" src="img/Schaefer-Brewery-1842.jpg" alt="Schaefer Brewery 1842">
+    <img class="content" src="img/brooklyn-currier-ives.jpg" alt="The City of Brooklyn, 1879 Currier & Ives print">
 
     <h3>1855</h3>
 
