--- a/brewing-tour/images.html
+++ b/brewing-tour/images.html
@@ -172,8 +172,8 @@
     <p class="caption-title">Gablingers Beer Paper Ad</p>
     <p class="caption-text">Gablinger’s Diet Beer (begun at Liebmann and Sons) appeared in 1967, thanks to the work of Joseph Owades, who found a way to remove starch, carbs, and thus calories from beer. He shared the recipe with a friend at Meister Brau, which followed thereafter. Miller bought Meister Brau in 1972 and launched Miller Lite in 1975, supported with &quot;Tastes Great, Less Filling,&quot; the iconic campaign created by McCann-Erickson.</p>
     
-    <img class="content historical" src="img/Leonard-Eppig-calendar.jpg" alt="Leonard Eppig Calendar">
-    <p class="caption-title">Leonard Eppig</p>
+    <img class="content historical" src="img/leonard-eppig-calendar.jpg" alt="Leonard Eppig Calendar">
+    <p class="caption-title">Leonard Eppig Calendar</p>
     <p class="caption-text">592 Bushwick Avenue and Melrose Street</p>
 
     <img class="content historical" src="img/leonard-eppig-44-george-st.jpg" alt="Leonard Eppig Brewery">
