--- a/brewing-tour/images.html
+++ b/brewing-tour/images.html
@@ -180,7 +180,7 @@
     <p class="caption-title">Leonard Eppig Brewery</p>
     <p class="caption-text">Expansion still standing at 44 George Street</p>
 
-    <img class="content historical" src="img/leonard-eppig.jpg" alt="Leonard Eppig">
+    <img class="content historical" src="img/Leonard-Eppig.jpg" alt="Leonard Eppig">
     <p class="caption-title">Leonard Eppig</p>
 
     <img class="content historical" src="img/Schaefer-Brewery-1842.jpg" alt="Schaefer Brewery 1842">
