--- a/brewing-tour/images.html
+++ b/brewing-tour/images.html
@@ -103,7 +103,7 @@
 
     <img class="content historical" src="img/Egon-Eisenhauer-Gesanges-die-Deutschlandreise.jpg" alt="Egon Eisenhauer Gesanges die Deutschlandreise">
     <p class="caption-title">Cover of Egon Eisenhauer, Auf Flügeln des Gesanges die Deutschlandreise des Arion von Brooklyn</p>
-    <p class="caption-text">(Translation: On the Wings of Song, the German story of Arion of Brooklyn) <em>Source: F. Wiedner Printing & Publishing Company, 1908</em></p>
+    <p class="caption-text">(Translation: On the Wings of Song, the German Story of Arion of Brooklyn) <em>Source: F. Wiedner Printing & Publishing Company, 1908</em></p>
 
     <img class="content historical" src="img/arion-hall.jpg" alt="Arion Hall">
     <p class="caption-title">Arion Hall</p>
@@ -136,7 +136,7 @@
     <p class="caption-title">Baseball in Bushwick</p>
     <p class="caption-text">A spread from <em>Frank Leslie's Illustrated Newspaper</em>, November 4, 1865. Deceased star player Jim Creighton is shrouded at the top. On the right, newspaper mastheads and a portrait of Henry Chadwick pay homage to sportswriters. On the field, the Atlantics beat the Eckfords in the world's championship, 38 to 8.</p>
 
-    <p class="caption-text">The illustration's caption reads: "Great base ball match between the Atlantic and Eckford Clubs of Brooklyn, at the Union Base Ball Grounds, Brooklyn, E. D. Oct 13, with portraits of the leading players of the principle clubs of New York, Brooklyn and Newark."</p>
+    <p class="caption-text">The illustration's caption reads: "Great base ball match between the Atlantic and Eckford Clubs of Brooklyn, at the Union Base Ball Grounds, Brooklyn, E. D. Oct 13, with portraits of the leading players of the principle clubs of New York, Brooklyn and Newark." (E. D. stands for Eastern District)</p>
 
     <p class="caption-text">The Union Grounds were built in 1862 on the outskirts of the nearby town of Wallabout, at today's Marcy Ave & Lynch St. It was the first to fence in the playing field and charge spectators.</p>
 
