--- a/brewing-tour/images.html
+++ b/brewing-tour/images.html
@@ -154,7 +154,7 @@
     <p class="caption-text">Note the Rheingold billboard</p>
 
     <img class="content historical" src="img/Rheingold-ad.jpg" alt="Rheingold ad">
-    <p class="caption-title">Miss Rheingold ad</p>
+    <p class="caption-title">Miss Rheingold Ad</p>
 
     <img class="content historical" src="img/Liebmann-Sons-Rheingold-Brewery-1.jpg" alt="Liebmann Sons Rheingold Brewery">
     <p class="caption-title">Liebmann &amp; Sons (Rheingold Brewery)</p>
@@ -258,7 +258,7 @@
     <p class="caption-title">Joseph Fallert’s</p>
     <p class="caption-text">Meserole Street and Lorimer Street</p>
 
-    <img class="content historical" src="img/Joseph-Fallerts-Daily-Eagle-ad-1897.jpg" alt="Joseph Fallerts Daily Eagle ad 1897">
+    <img class="content historical" src="img/Joseph-Fallerts-Daily-Eagle-ad-1897.jpg" alt="Joseph Fallerts Daily Eagle Ad 1897">
     <p class="caption-title">Joseph Fallert’s Daily Eagle Ad, 1897</p>
     <p class="caption-text">&quot;Alt-Bayerisch (old Bavarian) beer. A dark beer especially brewed and bottled for family use where a strengthening and healthy beverage is necessary. It’s a food.&quot;</p>
 
