--- a/brewing-tour/images.html
+++ b/brewing-tour/images.html
@@ -91,7 +91,7 @@
     <p class="caption-text"><em>Source: East New York Project</em></p>
 
     <img class="content historical" src="img/1909-New-York-Sun-brewery-ads.jpg" alt="1909 New York Sun brewery ads">
-    <p class="caption-title">1909 New York Sun Brewery ads</p>
+    <p class="caption-title">1909 New York Sun Brewery Ads</p>
     <p class="caption-text">Liebmann’s (Bushwick), Otto Huber (Bushwick), Ulmer (Bushwick), Trommer’s (Bushwick), Excelsior (Bushwick)</p>
 
     <img class="content historical" src="img/bbt-william-ulmer-brewery.jpg" alt="William Ulmer Brewery">
@@ -308,7 +308,7 @@
     <p class="caption-text">Meserole Street from Bushwick Avenue to Waterbury Street</p>
 
     <img class="content historical" src="img/Huber-Hittleman-Brewery.jpg" alt="Huber Hittleman Brewery Ad">
-    <p class="caption-title">Huber-Hittleman Brewery ad</p>
+    <p class="caption-title">Huber-Hittleman Brewery Ad</p>
 
     <img class="content historical" src="img/Huber-Hittleman-Brewery-1.jpg" alt="Huber-Hittleman Brewery">
     <p class="caption-title">Huber-Hittleman Brewery</p>
