--- a/brewing-tour/images.html
+++ b/brewing-tour/images.html
@@ -172,6 +172,10 @@
     <p class="caption-title">Gablingers Beer Paper Ad</p>
     <p class="caption-text">Gablinger’s Diet Beer (begun at Liebmann and Sons) appeared in 1967, thanks to the work of Joseph Owades, who found a way to remove starch, carbs, and thus calories from beer. He shared the recipe with a friend at Meister Brau, which followed thereafter. Miller bought Meister Brau in 1972 and launched Miller Lite in 1975, supported with &quot;Tastes Great, Less Filling,&quot; the iconic campaign created by McCann-Erickson.</p>
     
+    <img class="content historical" src="img/Obermeyer-Liebermann.jpg" alt="Waiting for the Trolley, 1911">
+    <p class="caption-title">Waiting for the Trolley, 1911</p>
+    <p class="caption-text">Women and children waiting for the Gates Ave. trolley car on Myrtle Avenue. In the background, you can see an Obermeyer and Liebermann’s Lager Beer company location. The brewery was begun by one of Samuel's sons, Joseph, and a business partner. It was also known as Havana Brewery and existed from 1868–1924 before being absorbed back into his father’s brewery. <em>Source: Brooklyn Historical Society</em></p>
+
     <img class="content historical" src="img/leonard-eppig-calendar.jpg" alt="Leonard Eppig Calendar">
     <p class="caption-title">Leonard Eppig Calendar</p>
     <p class="caption-text">592 Bushwick Avenue and Melrose Street</p>
@@ -181,19 +185,32 @@
     <p class="caption-text">Expansion still standing at 44 George Street</p>
 
     <img class="content historical" src="img/Leonard-Eppig.jpg" alt="Leonard Eppig">
-    <p class="caption-title">Leonard Eppig</p>
+    <p class="caption-title">The man himself, Leonard Eppig, a towering figure of great prominence in Bushwick.</p>
 
     <img class="content historical" src="img/Schaefer-Brewery-1842.jpg" alt="Schaefer Brewery 1842">
     <p class="caption-title">Schaefer Brewery, 1842</p>
+    <p class="caption-text">The brewery's first location in Manhattan.</p>
+
+    <img class="content historical" src="img/schaefer-bpl.jpg" alt="Schaefer Brewery, 1939">
+    <p class="caption-title">Schaefer Brewery, 1939</p>
+    <p class="caption-text">Schaefer Brewing Company located at 430 Kent Avenue <em>Source: Brooklyn Public Library, Brooklyn Collection</em></p>
 
     <img class="content historical" src="img/Schaefer-Brewery-1942.jpg" alt="Schaefer Brewery 1942">
     <p class="caption-title">Schaefer Brewery, 1942</p>
 
+    <img class="content historical" src="img/schaefer-post-strike.jpg" alt="Schaefer barrels, after the strike">
+    <p class="caption-title">The Draught Ends, 1949</p>
+    <p class="caption-text">Beer rolls off an assembly line at the Schaefer Brewery as deliveries resume to local taverns and restaurants after a three-month strike <em>Source: The Brooklyn Eagle via the Brooklyn Public Library, Brooklyn Collection</em></p>
+
+    <img class="content historical" src="img/schaefer-panel.jpg" alt="Schaefer Panel">
+    <p class="caption-title">Beer Tasting, 1954</p>
+    <p class="caption-text">Dr. John F. Brockelmann, third from left, technical director of F. & M. Schaefer Brewing Company, shows Dr. Rudolf Luedtke, president of the German Brewers Association, samples of beer fermenting in Schaefer's huge open tanks as other heads of West German breweries observe the test with great interest. <em>Source: The Brooklyn Eagle via the Brooklyn Public Library, Brooklyn Collection</em></p>
+
     <img class="content historical" src="img/Schaefer-Brewery-Brooklyn.jpg" alt="Schaefer Brewery Brooklyn">
-    <p class="caption-title">Schaefer Brewery, Brooklyn</p>
+    <p class="caption-title">Schaefer Brewery, Kent Ave, Brooklyn</p>
 
     <img class="content historical" src="img/Schaefer-Brewery-Brooklyn-detail.jpg" alt="Schaefer Brewery Brooklyn detail">
-    <p class="caption-title">Schaefer Brewery, Brooklyn (detail)</p>
+    <p class="caption-title">Schaefer Brewery, Kent Ave, Brooklyn (detail)</p>
 
     <img class="content historical" src="img/Schaefer-Brewery-building-today.jpg" alt="Schaefer Brewery building today">
     <p class="caption-title">Schaefer Brewery building today</p>
@@ -233,6 +250,10 @@
     <img class="content historical" src="img/Excelsior-Brewery-1948.jpg" alt="Excelsior Brewery, 1948">
     <p class="caption-title">Excelsior Brewery, 1948</p>
     <p class="caption-text">Photo is showing the abandoned brewery. It had closed in 1938 and would be torn down in just a few years, sometime in the 1950s.</p>
+
+    <img class="content historical" src="img/kings-beer.jpg" alt="Kings Beer Neon Sign">
+    <p class="caption-title">Kings Beer Neon Sign, 1933</p>
+    <p class="caption-text">Located at 363 Johnson Avenue, this brewery began as Frederick Hower Brewing Company before becoming Excelsior Brewing Company and finally, after Prohibition, Kings Brewery <em>Source: Museum of the City of New York</em></p>
 
     <img class="content historical" src="img/Eurich-Brewery-Calendar-1900.jpg" alt="Eurich Brewery Calendar, 1900">
     <p class="caption-title">Eurich Brewery Calendar, 1900</p>
