--- a/brewing-tour/tour.html
+++ b/brewing-tour/tour.html
@@ -53,7 +53,7 @@
 
   <div class="wrapper">
 
-    <h2>New Tour Date Scheduled!</h2>
+    <!-- <h2>New Tour Date Scheduled!</h2>
 
     <p>Announcing a new tour date! <strong>Thursday June 23, 2016</strong> at 7pm. It's the only one scheduled for right now so get your tickets while they last!</p>
     
@@ -61,7 +61,7 @@
       <button onclick=window.open('https://www.eventbrite.com/e/landmark-bushwick-breuckelen-beer-june-23-tickets-25638446283') class="btn-5 icon-beer"><span>Buy Tickets</span></button>
     </p>
 
-    <hr class="divider-line" />
+    <hr class="divider-line" /> -->
 
     <p><span class="drop">W</span>elcome to <strong>A Brewing History of Bushwick</strong>. Believe it or not, the neighborhood of Bushwick, Brooklyn was once the beer brewing center of America. On this walking tour, we’ll look at some historic 19th-century landmark brewery buildings that are still standing. We’ll also make our way to <strong>Brewer’s Row</strong>, recounting the stories of the breweries, the beer, and the people that made Bushwick a thriving brewing powerhouse.</p>
 
