--- a/brewing-tour/images.html
+++ b/brewing-tour/images.html
@@ -243,6 +243,10 @@
     <p class="caption-title">Portrait of Interboro Brewery Brewmaster Reid</p>
     <p class="caption-text">Interboro was headed by Jacob Levy who bought Leonard Eppig's Brewery just before Prohibition. Levy's business partner was a man named Arthur Flegenheimer — more notoriously known as gangster Dutch Schultz, "The Beer Baron of the Bronx." In July of 1935, Manhattan beer giant George Ehret’s son Louis J. Ehret purchased the Interboro facility and later, the brewery was acquired by Joseph Schlitz in 1949. The brewery closed in 1950.</p>
 
+    <img class="content historical" src="img/AmericanHistoryMuseumDiagram.jpg" alt="Brewing Plant Diagram">
+    <p class="caption-title">Mid-Century Brewing Plant Diagram</p>
+    <p class="caption-text">Much like the Schlitz plant still standing on Evergreen Ave.<em>Source: Smithsonian's American History Museum</em></p>
+
     <img class="content historical" src="img/PulaskiStreet-near-SumnerAvenue-ExcelsiorBrewingBuilding.jpg" alt="Pulaski Street near Sumner Avenue Excelsior Brewing Building">
     <p class="caption-title">Excelsior Brewing Co. Building</p>
     <p class="caption-text">Pulaski Street near Sumner Avenue</p>
