--- a/brewing-tour/images.html
+++ b/brewing-tour/images.html
@@ -245,7 +245,7 @@
 
     <img class="content historical" src="img/AmericanHistoryMuseumDiagram.jpg" alt="Brewing Plant Diagram">
     <p class="caption-title">Mid-Century Brewing Plant Diagram</p>
-    <p class="caption-text">Much like the Schlitz plant still standing on Evergreen Ave.<em>Source: Smithsonian's American History Museum</em></p>
+    <p class="caption-text">Much like the Schlitz plant still standing on Evergreen Ave. <em>Source: The Smithsonian's American History Museum</em></p>
 
     <img class="content historical" src="img/PulaskiStreet-near-SumnerAvenue-ExcelsiorBrewingBuilding.jpg" alt="Pulaski Street near Sumner Avenue Excelsior Brewing Building">
     <p class="caption-title">Excelsior Brewing Co. Building</p>
