--- a/brewing-tour/timeline.html
+++ b/brewing-tour/timeline.html
@@ -117,7 +117,7 @@
 
     <h3>Today</h3>
 
-    <p>Hope! Three up and coming breweries to the area, bringing craft beer back to it's rightful home:<a href="http://www.bravenbrewing.com/" target="_blank">Braven Brewery</a>, <a href="http://www.kcbcbeer.com/" target="_blank">KCBC</a>, and <a href="http://www.interboro.nyc/" target="_blank">Interboro.</a></p>
+    <p>Hope! Three up and coming breweries to the area, bringing craft beer back to it's rightful home: <a href="http://www.bravenbrewing.com/" target="_blank">Braven Brewery</a>, <a href="http://www.kcbcbeer.com/" target="_blank">Kings County Brewers Collective</a>, and <a href="http://www.interboro.nyc/" target="_blank">Interboro Spirits and Ales.</a></p>
 
     <br><br><br><br>
 
