--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
   <!--[if lt IE 7]>
     <p class="browsehappy">Uh-oh! Looks like you're using an <strong>outdated</strong> browser. You should definitely <a href="http://browsehappy.com/">upgrade</a>. May I suggest Google Chrome, Firefox or Safari?</p>
   <![endif]-->
-  <div class="sidebar">
+  <div class="sidebar flex-item">
     <a href="index.html">
       <img class='logo' src="images/logo4.png">
       <br>
@@ -39,19 +39,21 @@
     <h3 class='nav name'>Chris Heuberger</h3>
     <p class='nav title'>web developer + designer</p>
     <ul class='nav-ul'>
-      <li><a class='nav current' href="about.html">about</a></li>
-      <li><a class='nav' href="development.html">development</a></li>
+      <li><a class='nav' href="about.html">about</a></li>
+      <li><a class='nav work-temp' href="#">work</a>&nbsp;<span class='work-temp-fade'><span class='colorize'>coming soon</span></span></li>
+      <!-- <li><a class='nav' href="development.html">development</a></li>
       <li><a class='nav' href="design.html">design</a></li>
       <li><a class='nav' href="photo.html">photo</a></li>
-      <li><a class='nav' href="play.html">play</a></li><br>
+      <li><a class='nav' href="play.html">play</a></li> -->
+      <br>
       <li><a class='nav' href='https://github.com/ChrisBup' target="_blank">GitHub</a></li>
       <li><a class='nav' href='http://codepen.io/ChrisBup' target="_blank">CodePen</a></li>
       <li><a class='nav' href='https://dribbble.com/chrisbup' target="_blank">Dribbble</a></li>
       <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank">LinkedIn</a></li>
       <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank">Twitter</a></li>
       <li><a class='nav' href='http://instagram.com/chrisbup' target="_blank">Instagram</a></li><br>
-      <li><a class='nav' href='mailto:chrisheuberg@gmail.com' title='chrisheuberg@gmail.com'>email</a></li>
-      <li><a class='nav' href="resume.html">r&eacute;sum&eacute;</a></li>
+      <li><a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" title='chrisheuberg@gmail.com'>email</a></li>
+      <li><a class='nav cv-temp' href="#">r&eacute;sum&eacute;</a>&nbsp;<span class='cv-temp-fade'><span class='colorize'>coming soon</span></span></li>
     </ul>
   </div>
 
@@ -60,11 +62,7 @@
     <div class='about-format'>
       <h1 class='about all-caps'>ABOUT</h1><br>
       <img class='about-img' src="images/ch-self-sq.png">
-      <p>I recently graduated from the Web Development Immersive (WDI) program at General Assembly, a 12-week full-time dev bootcamp and an incredible experience.</p><br>
-      <p>For me, development and design come down to organizing information so that it's most accessible to the user; i.e. conveying a message efficiently and crafting an intuitive experience.</p><br>
-      <p>When I'm not coding, I like to run while listening to podcasts, play pick-up soccer, cook mediterranean, and pet any dog I meet. I keep visual journals where I collect design ideas, inspiration and make all sorts of lists.</p><br>
-      <p>I love lists.</p><br>
-      <p>But basically, I'm a sponge for all things web development so if you have any advice or questions or are looking for a rookie coder who's weirdly enthusiastic about RESTful routes, closures, and database queries, please <a class='about-link' href='mailto:chrisheuberg@gmail.com'>reach out!</a><p>
+      <p>Aside from design and development, I like running while listening to podcasts, playing pick-up soccer, cooking mediterranean, and petting any dog I meet. I keep visual journals where I collect design ideas, inspiration, and sketch when I travel. I'm really into side-projects and I love making lists.</p>
     </div>
 
     <div class='about-sidebar'>
@@ -78,7 +76,7 @@
           <li>embarassing secret: I own three fanny packs.</li>
           <li>fascination: behavioral economics</li>
           <li>hidden talent: I can recite Hamlet's big soliloquy.</li>
-          <li>odd habit: I keep diligent lists of good catch phrases, band names, and t-shirt ideas.</li>
+          <li>odd habit: I keep diligent lists of good catch phrases, band names, conversation topics, fun facts, and inpirational quotes.</li>
           <li>favorite hobby: exploring a new city</li>
         </ul>
       </div>
