--- a/development.html
+++ b/development.html
@@ -50,7 +50,7 @@
       <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank">LinkedIn</a></li>
       <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank">Twitter</a></li>
       <li><a class='nav' href='http://instagram.com/chrisbup' target="_blank">Instagram</a></li><br>
-      <li><a class='nav' href='mailto:chrisheuberg@gmail.com' title='chrisheuberg@gmail.com'>email</a></li>
+      <li><a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" title='chrisheuberg@gmail.com'>email</a></li>
       <li><a class='nav' href="resume.html">r&eacute;sum&eacute;</a></li>
     </ul>
   </div>
