--- a/index.html
+++ b/index.html
@@ -43,26 +43,28 @@
       <p class='nav title'>web developer + designer</p>
       <ul class='nav-ul'>
         <li><a class='nav' href="about.html">about</a></li>
-        <li><a class='nav' href="development.html">development</a></li>
+        <li><a class='nav work-temp' href="#">work</a>&nbsp;<span class='work-temp-fade'><span class='colorize'>coming soon</span></span></li>
+        <!-- <li><a class='nav' href="development.html">development</a></li>
         <li><a class='nav' href="design.html">design</a></li>
         <li><a class='nav' href="photo.html">photo</a></li>
-        <li><a class='nav' href="play.html">play</a></li><br>
+        <li><a class='nav' href="play.html">play</a></li> -->
+        <br>
         <li><a class='nav' href='https://github.com/ChrisBup' target="_blank">GitHub</a></li>
         <li><a class='nav' href='http://codepen.io/ChrisBup' target="_blank">CodePen</a></li>
         <li><a class='nav' href='https://dribbble.com/chrisbup' target="_blank">Dribbble</a></li>
         <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank">LinkedIn</a></li>
         <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank">Twitter</a></li>
         <li><a class='nav' href='http://instagram.com/chrisbup' target="_blank">Instagram</a></li><br>
-        <li><a class='nav' href='mailto:chrisheuberg@gmail.com' title='chrisheuberg@gmail.com'>email</a></li>
-        <li><a class='nav' href="resume.html">r&eacute;sum&eacute;</a></li>
+        <li><a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" title='chrisheuberg@gmail.com'>email</a></li>
+        <li><a class='nav cv-temp' href="#">r&eacute;sum&eacute;</a>&nbsp;<span class='cv-temp-fade'><span class='colorize'>coming soon</span></span></li>
       </ul>
     </div>
 
     <div id="main-content-intro-override" class="main-content flex-item">
-      
+
       <div id='intro'>
-        <span class="close-intro">&times;</span>
-        <h3 class='highlight'>Hi, I&#8217;m a web developer and UX designer at <a href="http://www.radishlab.com" target="_blank">Radish Lab</a> in Bushwick, Brooklyn. I&#8217;m an environmentalist, history nerd, runner, and fanny pack enthusiast. I&#8217;m into social impact projects, data visualization, typography, all forms of design, science, art, and pretty much every other subject. I also lead <a href="http://www.bushwickbrewingtour.com" target="_blank">The Bushwick Brewing Tour</a>. Nice to meet ya.</h3>        
+        <!-- <span class="close-intro">&times;</span> -->
+        <h3 class='highlight'>Hi, I&#8217;m a web developer and UX designer at <a href="http://www.radishlab.com" target="_blank">Radish Lab</a> in Bushwick, Brooklyn. I&#8217;m an environmentalist, history nerd, runner, and fanny pack enthusiast. I&#8217;m into social impact projects, data visualization, typography, all forms of design, science, art, and pretty much every other subject. I also lead <a href="http://www.bushwickbrewingtour.com" target="_blank">The Bushwick Brewing Tour</a>. Nice to meet ya.</h3>
       </div>
       <div class='venn'>
         <h2 class='interests'>INTERESTS</h2>
