--- a/gtrainlovestory/index.html
+++ b/gtrainlovestory/index.html
@@ -319,14 +319,14 @@
                 <div class="col-md-12 text-center">
                     <h3>Taxis</h3>
                 </div>
-                <div class="col-md-8 col-md-offset-2">    
+                <div class="col-md-8 col-md-offset-2">
                     <p>Yellow taxi cabs can pick up and drop off passengers anywhere in New York City. You'll see them mostly in Manhattan.</p>
                     <p>Green taxi cabs (or boro taxis) can be hailed in Manhattan above Central Park and all outer boroughs (the Bronx, Brooklyn, Queens, and Staten Island) except at the airports. They can drop off passengers anywhere, but will not be able to pick up new passengers within Manhattan's <a href="http://www.nyc.gov/html/tlc/images/features/map_service_area.png" target="_blank">"yellow zone"</a> (south of East 96th and West 110th Streets) or at airports. </p>
                 </div>
                 <div class="col-md-12 text-center">
                     <h3>Car Services</h3>
                 </div>
-                <div class="col-md-8 col-md-offset-2">      
+                <div class="col-md-8 col-md-offset-2">
                     <p>These are the car service companies available in our neighborhood. You can call them anytime and usually be picked up within five minutes. </p>
                     <div class="row">
                         <div class="col-md-8 col-md-offset-3">
@@ -383,7 +383,7 @@
                         <h5 class="footy"><a class='reveal'>Check out our video!</a></h5>
                         <div class="viddy">
                             <iframe src="https://player.vimeo.com/video/139133207?color=00f0c8" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                        </div>  
+                        </div>
                     </div>
                 </div>
             </div>
@@ -404,7 +404,7 @@
                     </p>
                 </div>
                 </a>
-                <a href="https://docs.google.com/spreadsheets/d/1tcP2LHFNipevTnqtIQIz8ml1mMNN8KcneizegfWN7Xw/edit?usp=sharing" target="_blank">
+                <a href="http://www.cookyhero.com" target="_blank">
                 <div class="col-md-4 light-box box-hover">
                     <h5>Recipes</h5>
                     <p>These are our favorites, now add yours!</p>
