--- a/santa-fe/index.html
+++ b/santa-fe/index.html
@@ -13,7 +13,7 @@
     <!-- DEFAULT META TAGS -->
 
     <!-- FONTS -->
-    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai" rel="stylesheet">
     <link href="http://fonts.googleapis.com/css?family=Maven+Pro:400,700,900" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet" type="text/css">
@@ -50,8 +50,8 @@
     <header id="header">
       <div class="header-inner clearfix">
         <div id="logo" class="left-float show-light-logo">
-          <a id="dark-logo" class="logotype" href="index.html"><img src="files/uploads/logo-avoc-dark.png" srcset="files/uploads/logo-avoc-dark.png 1x, files/uploads/logo-avoc-dark@2x.png 2x" alt="Logo"></a>
-          <a id="light-logo" class="logotype" href="index.html"><img src="files/uploads/logo-avoc-light.png" srcset="files/uploads/logo-avoc-light.png 1x, files/uploads/logo-avoc-light@2x.png 2x" alt="Logo"></a>
+          <span id="dark-logo" class="logotype"><img src="files/uploads/logo-avoc-dark.png" srcset="files/uploads/logo-avoc-dark.png 1x, files/uploads/logo-avoc-dark@2x.png 2x" alt="Logo"></span>
+          <span id="light-logo" class="logotype"><img src="files/uploads/logo-avoc-light.png" srcset="files/uploads/logo-avoc-light.png 1x, files/uploads/logo-avoc-light@2x.png 2x" alt="Logo"></span>
         </div>
       </div> <!-- END .header-inner -->
     </header>
@@ -415,7 +415,9 @@
 
       </div> <!-- END .wrapper -->
 
-      <div class="spacer spacer-big"></div>
+      <div class="spacer spacer-small"></div>
+      <h3 class="align-center"><strong>Das it!</strong></h3>
+      <div class="spacer spacer-medium"></div>
 
     </section>
     <!-- PAGEBODY -->
