--- a/index.html
+++ b/index.html
@@ -35,11 +35,7 @@
   <div class="flex-container">
 
     <div class="sidebar flex-item">
-      <a href="index.html">
-        <img class='logo' src="images/logo4.png">
-        <br>
-      </a>
-      <h3 class='nav name'>Chris Heuberger</h3>
+      <h3 class='nav name'><a class='nav' href="index.html">Chris Heuberger</a></h3>
       <p class='nav title'>web developer + designer</p>
       <ul class='nav-ul'>
         <li><a class='nav' href="about.html">about</a></li>
