--- a/play.html
+++ b/play.html
@@ -32,11 +32,7 @@
     <p class="browsehappy">Uh-oh! Looks like you're using an <strong>outdated</strong> browser. You should definitely <a href="http://browsehappy.com/">upgrade</a>. May I suggest Google Chrome, Firefox or Safari?</p>
     <![endif]-->
     <div class="sidebar">
-      <a href="index.html">
-        <img class='logo' src="images/logo4.png">
-        <br>
-      </a>
-      <h3 class='nav name'>Chris Heuberger</h3>
+      <h3 class='nav name'><a class='nav' href="index.html">Chris Heuberger</a></h3>
       <p class='nav title'>web developer + designer</p>
       <ul class='nav-ul'>
         <li><a class='nav' href="about.html">about</a></li>
