add trailing slash

--- a/scandinavia/index.html
+++ b/scandinavia/index.html
@@ -37,7 +37,7 @@
         <h3>Coming soon, maybe later:</h3>
         <h1>Our Trip to Scandinavia</h1>
 
-        <p><a href="/travel">Back to Travel</a></p>
+        <p><a href="/travel/">Back to Travel</a></p>
 
       </div>
     </section>
